--- a/kafka-client/pom.xml
+++ b/kafka-client/pom.xml
@@ -1,49 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>6</source>
-                    <target>6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <parent>
         <groupId>org.dat.tran</groupId>
         <artifactId>kafka-library</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>kafka-handler</artifactId>
-    <n>Kafka Handlers</n>
+    <artifactId>kafka-client</artifactId>
+    <n>Kafka Client</n>
 
     <dependencies>
-        <!-- Core interfaces -->
+        <!-- Core and models -->
         <dependency>
             <groupId>org.dat.tran</groupId>
             <artifactId>kafka-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- Models -->
         <dependency>
             <groupId>org.dat.tran</groupId>
             <artifactId>kafka-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- Registry for annotations -->
         <dependency>
             <groupId>org.dat.tran</groupId>
             <artifactId>kafka-registry</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- Spring context -->
+
+        <!-- Spring Kafka -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <!-- Spring Boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <!-- Jackson for JSON -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 </project>
