--- a/kafka-core/pom.xml
+++ b/kafka-core/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.dat.tran</groupId>
@@ -7,6 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>kafka-core</artifactId>
-    <name>Archetype - kafka-core</name>
-    <url>http://maven.apache.org</url>
+    <n>Kafka Core Interfaces</n>
+
+    <!-- No dependencies - pure abstractions -->
 </project>
