--- a/kafka-model/pom.xml
+++ b/kafka-model/pom.xml
@@ -1,12 +1,25 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <parent>
         <groupId>org.dat.tran</groupId>
         <artifactId>kafka-library</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>kafka-model</artifactId>
-    <name>Archetype - kafka-model</name>
-    <url>http://maven.apache.org</url>
+    <name>Kafka Models</name>
+
+    <!-- No dependencies - pure data models -->
 </project>
