--- a/kafka-registry/pom.xml
+++ b/kafka-registry/pom.xml
@@ -1,27 +1,40 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <parent>
         <groupId>org.dat.tran</groupId>
         <artifactId>kafka-library</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>kafka-registry</artifactId>
-    <name>Archetype - kafka-registry</name>
-    <url>http://maven.apache.org</url>
+    <n>Kafka Registry</n>
 
     <dependencies>
-        <!-- Need core, annotation, and Spring Context -->
+        <!-- Core interfaces -->
         <dependency>
             <groupId>org.dat.tran</groupId>
             <artifactId>kafka-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- Models for enums -->
         <dependency>
             <groupId>org.dat.tran</groupId>
-            <artifactId>kafka-annotation</artifactId>
+            <artifactId>kafka-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- Spring context -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
