--- a/pom.xml
+++ b/pom.xml
@@ -43,4 +43,17 @@
     </dependencies>
   </dependencyManagement>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>17</source>  <!-- ✅ Change to 17 -->
+          <target>17</target>  <!-- ✅ Change to 17 -->
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
