--- a/kafka-client/pom.xml
+++ b/kafka-client/pom.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.dat.tran</groupId>
@@ -7,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>kafka-client</artifactId>
-    <n>Kafka Client</n>
+    <name>Kafka Client</name>
 
     <dependencies>
         <!-- Core and models -->
