--- a/kafka-handler/pom.xml
+++ b/kafka-handler/pom.xml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>6</source>
-                    <target>6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <parent>
         <groupId>org.dat.tran</groupId>
         <artifactId>kafka-library</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>kafka-handler</artifactId>
-    <n>Kafka Handlers</n>
+    <name>Kafka Handlers</name>
 
     <dependencies>
         <!-- Core interfaces -->
