--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -9,7 +8,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <n>Simple Kafka Library</n>
+  <name>Simple Kafka Library</name>
   <description>Simple Kafka system using Composite Key and Strategy Pattern</description>
 
   <!-- All modules -->
@@ -48,9 +47,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
         <configuration>
-          <source>17</source>  <!-- ✅ Change to 17 -->
-          <target>17</target>  <!-- ✅ Change to 17 -->
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
     </plugins>
