--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,44 @@
+# IntelliJ IDEA
+.idea/
+*.iml
+out/
+
+# Maven
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+.mvn/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Gradle (nếu dùng Gradle thay vì Maven)
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+.gradle/
+**/build/
+**/out/
+!gradle/wrapper/gradle-wrapper.jar
 
-### VS Code ###
-.vscode/
+# Logs
+*.log
 
-### Mac OS ###
+# OS files
 .DS_Store
+Thumbs.db
+
+# Environment files
+.env
+*.env
+
+# Java
+*.class
+
+# Temporary files
+*.tmp
+*.swp
+*.swo
+
+# Spring Boot specific
+application-*.yml
+application-*.properties
