--- a/kafka-model/pom.xml
+++ b/kafka-model/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.dat.tran</groupId>
@@ -10,13 +8,6 @@
     </parent>
     <artifactId>kafka-model</artifactId>
     <name>Kafka Models</name>
-    <dependencies>
-        <dependency>
-            <groupId>org.dat.tran</groupId>
-            <artifactId>kafka-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 
     <!-- No dependencies - pure data models -->
 </project>
